# Cpp-Architect-Roadmap

./: README.md
00_Playground/: .gitignore  ex1_bool.cpp  ex2_swap.cpp  ex3_operators.cpp  ex4_lvalue_rvalue.cpp  explicit.cpp  lab_atomic.cpp  lab_cond_var.cpp  lab_function.cpp  rvalue.cpp  rvalue_plus.cpp  tcp_echo_server.cpp  test_explicit.cpp  test_rvalue.cpp  test_rvalue_plus.cpp
01_Modern_Cpp/Week01_SmartPtr/: CMakeLists.txt  README.md
01_Modern_Cpp/Week01_SmartPtr/include/: smart_ptr.hpp
01_Modern_Cpp/Week01_SmartPtr/src/: main.cpp
01_Modern_Cpp/Week02_Performance/: CMakeLists.txt  README.md
01_Modern_Cpp/Week02_Performance/include/: my_string.hpp
01_Modern_Cpp/Week02_Performance/src/: main.cpp  my_string.cpp
01_Modern_Cpp/Week03_SharedPtr/: CMakeLists.txt  README.md
01_Modern_Cpp/Week03_SharedPtr/include/: shared_ptr.hpp
01_Modern_Cpp/Week03_SharedPtr/src/: test_basics.cpp  test_circular.cpp
01_Modern_Cpp/Week04_Concurrency/: CMakeLists.txt  README.md
01_Modern_Cpp/Week04_Concurrency/include/: thread_pool.hpp  thread_safe_queue.hpp
01_Modern_Cpp/Week04_Concurrency/src/: mutex_demo.cpp  pool_test.cpp  queue_test.cpp  race_condition_demo.cpp
01_Modern_Cpp/Week05_Networking/: CMakeLists.txt  README.md
01_Modern_Cpp/Week05_Networking/include/: Socket.hpp  thread_pool.hpp
01_Modern_Cpp/Week05_Networking/src/: Socket.cpp  main.cpp
